--- a/index.html
+++ b/index.html
@@ -53,12 +53,15 @@
         <div class="logo">ZLA</div>
         <nav>
             <ul>
-                <li><a href="#stls">STLs</a></li>
-                <li><a href="#programs">Programs</a></li>
-                <li><a href="#pictures">Pictures</a></li>
-                <li><a href="#videos">Videos</a></li>
-                <li><a href="#stories">Stories</a></li>
-                <li><a href="#thoughts">General Thoughts</a></li>
+               <!-- In index.html -->
+<li><a href="/index.html">Home</a></li>
+<li><a href="/stls.html">STLs</a></li>
+<li><a href="/programs.html">Programs</a></li>
+<li><a href="/pictures.html">Pictures</a></li>
+<li><a href="/videos.html">Videos</a></li>
+<li><a href="/stories.html">Stories</a></li>
+<li><a href="/thoughts.html">General Thoughts</a></li>
+
             </ul>
         </nav>
     </header>
