--- a/index.html
+++ b/index.html
@@ -53,48 +53,21 @@
         <div class="logo">ZLA</div>
         <nav>
             <ul>
-               <!-- In index.html -->
-<li><a href="/index.html">Home</a></li>
-<li><a href="/stls.html">STLs</a></li>
-<li><a href="/programs.html">Programs</a></li>
-<li><a href="/pictures.html">Pictures</a></li>
-<li><a href="/videos.html">Videos</a></li>
-<li><a href="/stories.html">Stories</a></li>
-<li><a href="/thoughts.html">General Thoughts</a></li>
-
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/stls.html">STLs</a></li>
+                <li><a href="/programs.html">Programs</a></li>
+                <li><a href="/pictures.html">Pictures</a></li>
+                <li><a href="/videos.html">Videos</a></li>
+                <li><a href="/stories.html">Stories</a></li>
+                <li><a href="/thoughts.html">General Thoughts</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section id="stls">
-            <h2>STLs</h2>
-            <p>This is the section for STL files. You can showcase and share your 3D models here.</p>
-        </section>
-
-        <section id="programs">
-            <h2>Programs</h2>
-            <p>This is the section for code and programs. Share your projects, scripts, and code snippets.</p>
-        </section>
-
-        <section id="pictures">
-            <h2>Pictures</h2>
-            <p>Display your favorite pictures and images in this section.</p>
-        </section>
-
-        <section id="videos">
-            <h2>Videos</h2>
-            <p>Share videos and multimedia content in this section.</p>
-        </section>
-
-        <section id="stories">
-            <h2>Stories</h2>
-            <p>Write and share your stories, experiences, and narratives here.</p>
-        </section>
-
-        <section id="thoughts">
-            <h2>General Thoughts</h2>
-            <p>This is the space for your general thoughts and reflections.</p>
+        <section>
+            <h2>Welcome to Your Personal Space</h2>
+            <p>This is the landing page for your personal website. Explore the different sections using the navigation bar above.</p>
         </section>
     </main>
 
