--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
         <div class="logo">ZLA</div>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/stls.html">STLs</a></li>
-                <li><a href="/programs.html">Programs</a></li>
-                <li><a href="/pictures.html">Pictures</a></li>
-                <li><a href="/videos.html">Videos</a></li>
-                <li><a href="/stories.html">Stories</a></li>
-                <li><a href="/thoughts.html">General Thoughts</a></li>
+                <li><a href="https://zincleadalloy.github.io/mydomainsite/index.html">Home</a></li>
+                <li><a href="https://zincleadalloy.github.io/mydomainsite/stls.html">STLs</a></li>
+                <li><a href="https://zincleadalloy.github.io/mydomainsite/programs.html">Programs</a></li>
+                <li><a href="https://zincleadalloy.github.io/mydomainsite/pictures.html">Pictures</a></li>
+                <li><a href="https://zincleadalloy.github.io/mydomainsite/videos.html">Videos</a></li>
+                <li><a href="https://zincleadalloy.github.io/mydomainsite/stories.html">Stories</a></li>
+                <li><a href="https://zincleadalloy.github.io/mydomainsite/thoughts.html">General Thoughts</a></li>
             </ul>
         </nav>
     </header>
