--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
 
             navLinks.forEach(link => {
                 link.addEventListener("click", function (event) {
+                    // Check if the link is an external link or has a target attribute
+                    if (this.hostname !== window.location.hostname || this.target === '_blank') {
+                        return; // Let the browser handle external links or links with target="_blank"
+                    }
+
                     event.preventDefault();
 
                     const targetId = this.getAttribute("href").substring(1);
