--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZLA - Your Personal Space</title>
-    <style>
+   <style>
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
@@ -53,22 +53,23 @@
         <div class="logo">ZLA</div>
         <nav>
             <ul>
-                <li><a href="https://zincleadalloy.github.io/mydomainsite/index.html">Home</a></li>
-                <li><a href="https://zincleadalloy.github.io/mydomainsite/stls.html">STLs</a></li>
-                <li><a href="https://zincleadalloy.github.io/mydomainsite/programs.html">Programs</a></li>
-                <li><a href="https://zincleadalloy.github.io/mydomainsite/pictures.html">Pictures</a></li>
-                <li><a href="https://zincleadalloy.github.io/mydomainsite/videos.html">Videos</a></li>
-                <li><a href="https://zincleadalloy.github.io/mydomainsite/stories.html">Stories</a></li>
-                <li><a href="https://zincleadalloy.github.io/mydomainsite/thoughts.html">General Thoughts</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#stls">STLs</a></li>
+                <li><a href="#programs">Programs</a></li>
+                <li><a href="#pictures">Pictures</a></li>
+                <li><a href="#videos">Videos</a></li>
+                <li><a href="#stories">Stories</a></li>
+                <li><a href="#thoughts">General Thoughts</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section>
+        <section id="home">
             <h2>Welcome to Your Personal Space</h2>
             <p>This is the landing page for your personal website. Explore the different sections using the navigation bar above.</p>
         </section>
+        <!-- Add similar sections with corresponding IDs for other links -->
     </main>
 
     <script>
