--- a/stls.html
+++ b/stls.html
@@ -3,17 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZLA - STLs</title>
-    <style>
-        /* Add styling specific to the STLs page */
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <title>STLs - Your Personal Page</title>
 </head>
 <body>
     <header>
-        <div class="logo">ZLA</div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
                 <li><a href="stls.html">STLs</a></li>
                 <li><a href="programs.html">Programs</a></li>
                 <li><a href="pictures.html">Pictures</a></li>
@@ -25,15 +21,12 @@
     </header>
 
     <main>
-        <section>
-            <h2>STL Files</h2>
-            <p>Welcome to the STLs section. Here, you can find and download 3D models in STL format.</p>
-            <!-- Add your specific STL content here -->
+        <section id="stls">
+            <h2>STLs</h2>
+            <p>This is a stub for the STLs page. Replace this with your actual content.</p>
         </section>
     </main>
 
-    <script>
-        // Add any specific scripts for the STLs page if needed
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
