--- a/stls.html
+++ b/stls.html
@@ -23,7 +23,7 @@
     <main>
         <section id="stls">
             <h2>STLs</h2>
-            <p>This is a stub for the STLs page. Replace this with your actual content.</p>
+            <p>This is a stub for the STLs page... Replace this with your actual content.</p>
         </section>
     </main>
 
