--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     </header>
 
     <main>
+        <!-- Example usage of the card -->
+<div class="card">
+    <h3>Card Title</h3>
+    <p>This is the content of the card. You can put any text or other elements here.</p>
+</div>
+
         <section id="stls">
             <h2>STLs</h2>
             <!-- Your STL content goes here -->
